@@ -983,117 +983,6 @@ For use as an element of `bbdb-notice-record-hook'."
                 (bbdb-annotate-record record annotation
                                       (nth 1 elt) (nth 3 elt))))))))))
 
-;;; Massage of mail addresses
-
-(defcustom bbdb-canonical-hosts
-  ;; Example
-  (regexp-opt '("cs.cmu.edu" "ri.cmu.edu"))
-  "Regexp matching the canonical part of the domain part of a mail address.
-If the domain part of a mail address matches this regexp, the domain
-is replaced by the substring that actually matched this address.
-
-Used by  `bbdb-canonicalize-mail-1'.  See also `bbdb-ignore-redundant-mails'."
-  :group 'bbdb-mua
-  :type '(regexp :tag "Regexp matching sites"))
-
-;;;###autoload
-(defun bbdb-canonicalize-mail-1 (address)
-  "Example of `bbdb-canonicalize-mail-function'.
-However, this function is too specific to be useful for the general user.
-Take it as a source of inspiration for what can be done."
-  (setq address (bbdb-string-trim address))
-  (cond
-   ;; Rewrite mail-drop hosts.
-   ;; RW: The following is now also handled by `bbdb-ignore-redundant-mails'
-   ((string-match
-     (concat "\\`\\([^@%!]+@\\).*\\.\\(" bbdb-canonical-hosts "\\)\\'")
-     address)
-    (concat (match-string 1 address) (match-string 2 address)))
-   ;;
-   ;; Here at Lucid, our workstation names sometimes get into our mail
-   ;; addresses in the form "jwz%thalidomide@lucid.com" (instead of simply
-   ;; "jwz@lucid.com").  This removes the workstation name.
-   ((string-match "\\`\\([^@%!]+\\)%[^@%!.]+@\\(lucid\\.com\\)\\'" address)
-    (concat (match-string 1 address) "@" (match-string 2 address)))
-   ;;
-   ;; Another way that our local mailer is misconfigured: sometimes addresses
-   ;; which should look like "user@some.outside.host" end up looking like
-   ;; "user%some.outside.host" or even "user%some.outside.host@lucid.com"
-   ;; instead.  This rule rewrites it into the original form.
-   ((string-match "\\`\\([^@%]+\\)%\\([^@%!]+\\)\\(@lucid\\.com\\)?\\'" address)
-    (concat (match-string 1 address) "@" (match-string 2 address)))
-   ;;
-   ;; Sometimes I see addresses like "foobar.com!user@foobar.com".
-   ;; That's totally redundant, so this rewrites it as "user@foobar.com".
-   ((string-match "\\`\\([^@%!]+\\)!\\([^@%!]+[@%]\\1\\)\\'" address)
-    (match-string 2 address))
-   ;;
-   ;; Sometimes I see addresses like "foobar.com!user".  Turn it around.
-   ((string-match "\\`\\([^@%!.]+\\.[^@%!]+\\)!\\([^@%]+\\)\\'" address)
-    (concat (match-string 2 address) "@" (match-string 1 address)))
-   ;;
-   ;; The mailer at hplb.hpl.hp.com tends to puke all over addresses which
-   ;; pass through mailing lists which are maintained there: it turns normal
-   ;; addresses like "user@foo.com" into "user%foo.com@hplb.hpl.hp.com".
-   ;; This reverses it.  (I actually could have combined this rule with
-   ;; the similar lucid.com rule above, but then the regexp would have been
-   ;; more than 80 characters long...)
-   ((string-match "\\`\\([^@!]+\\)%\\([^@%!]+\\)@hplb\\.hpl\\.hp\\.com\\'"
-          address)
-    (concat (match-string 1 address) "@" (match-string 2 address)))
-   ;;
-   ;; Another local mail-configuration botch: sometimes mail shows up
-   ;; with addresses like "user@workstation", where "workstation" is a
-   ;; local machine name.  That should really be "user" or "user@netscape.com".
-   ;; (I'm told this one is due to a bug in SunOS 4.1.1 sendmail.)
-   ((string-match "\\`\\([^@%!]+\\)[@%][^@%!.]+\\'" address)
-    (match-string 1 address))
-   ;;
-   ;; Sometimes I see addresses like "foo%somewhere%uunet.uu.net@somewhere.else".
-   ;; This is silly, because I know that I can send mail to uunet directly.
-   ((string-match ".%uunet\\.uu\\.net@[^@%!]+\\'" address)
-    (concat (substring address 0 (+ (match-beginning 0) 1)) "@UUNET.UU.NET"))
-   ;;
-   ;; Otherwise, leave it as it is.
-   (t address)))
-
-(defun bbdb-message-clean-name-default (name)
-  "Default function for `bbdb-message-clean-name-function'.
-This strips garbage from the user full NAME string."
-  ;; Remove leading non-alpha chars
-  (if (string-match "\\`[^[:alpha:]]+" name)
-      (setq name (substring name (match-end 0))))
-
-  (if (string-match "^\\([^@]+\\)@" name)
-      ;; The name is really a mail address and we use the part preceeding "@".
-      ;; Everything following "@" is ignored.
-      (setq name (match-string 1 name)))
-
-  ;; Replace "firstname.surname" by "firstname surname".
-  ;; Do not replace ". " with " " because that could be an initial.
-  (setq name (replace-regexp-in-string "\\.\\([^ ]\\)" " \\1" name))
-
-  ;; Replace tabs, spaces, and underscores with a single space.
-  (setq name (replace-regexp-in-string "[ \t\n_]+" " " name))
-
-  ;; Remove trailing comments separated by "(" or " [-#]"
-  ;; This does not work all the time because some of our friends in
-  ;; northern europe have brackets in their names...
-  (if (string-match "[^ \t]\\([ \t]*\\((\\| [-#]\\)\\)" name)
-      (setq name (substring name 0 (match-beginning 1))))
-
-  ;; Remove phone extensions (like "x1234" and "ext. 1234")
-  (let ((case-fold-search t))
-    (setq name (replace-regexp-in-string
-                "\\W+\\(x\\|ext\\.?\\)\\W*[-0-9]+" "" name)))
-
-  ;; Remove trailing non-alpha chars
-  (if (string-match "[^[:alpha:]]+\\'" name)
-      (setq name (substring name 0 (match-beginning 0))))
-
-  ;; Remove text properties
-  (substring-no-properties name))
-
 ;;; Mark BBDB records in the MUA summary buffer
 
 (defun bbdb-mua-summary-unify (address)
